Fixed logo margin on mobile layout

--- a/css/blog.css
+++ b/css/blog.css
@@ -445,6 +445,7 @@ ul.nav a:hover {
   .blog-header {
     width: 100%;
     height: 100%;
+    margin-bottom: -40px;
   }
   .blog-nav {
     width: 100%;
